fix broken grid on mobile

--- a/src/UI/BasePage/style.scss
+++ b/src/UI/BasePage/style.scss
@@ -1,3 +1,10 @@
 .base-page {
-  margin: 0 auto;
+  display: grid;
+  height: 100vh;
+
+  grid-template-areas: "header"
+  "body"
+  "footer";
+  grid-template-columns: 100%;
+  grid-template-rows: auto 1fr auto;
 }
