--- a/src/pages/PageFinances/style.scss
+++ b/src/pages/PageFinances/style.scss
@@ -1,18 +1,25 @@
 @import "style/_variables";
 
-.page-finances {
-  height: 100%;
-}
-
 .page-finances__header {
+  overflow: hidden;
+
   border-bottom-right-radius: 15px;
   border-bottom-left-radius: 15px;
-  overflow: hidden;
+
+  grid-row: header-start / header-end;
 }
 
 .page-finances__main {
-  flex-grow: 1;
+  height: 100%;
+  padding: var(--sp-2);
+
   background-color: var(--palette-bg);
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
+
+  grid-row: body-start / footer-end;
+
+  @include mobile-large-up {
+    padding: var(--sp-4);
+  }
 }
