--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -56,6 +56,12 @@ $classListNegative: (
   }
 }
 
+@mixin mobile-large-up {
+  @media screen and (min-width: 425px) {
+    @content;
+  }
+}
+
 @mixin tablet-up {
   @media screen and (min-width: 768px) {
     @content;
